# bento

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/adr/: 0001-implementation-language.md  README.md
docs/plan/: 00-labels-and-milestones.md  01-walking-shell.md  02-plugin-architecture.md  03-prompt-system.md  04-completions.md
src/: lib.rs  main.rs  parser.rs  token.rs
tests/: smoke.rs
