[package]
name = "bento"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A POSIX-ish shell with plugins, a prompt renderer, and a completion engine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/HundredAcreStudio/bento"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bento"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
